<resources>
    <!-- Nombre de la app -->
    <string name="app_name">ESports Application</string>

    <!-- Categorias de juegos -->
    <string name="cat_cod">Call of Duty</string>
    <string name="cat_fifa">FIFA</string>
    <string name="cat_bat">Battlefield</string>
    <string name="cat_lol">League of Legends</string>

    <!-- Descripcion juego -->
    <string name="des_cod">Juego bélico arcade</string>
    <string name="des_fifa">Juego deportivo de fútbol</string>
    <string name="des_bat">Juego bélico con cierto grado de realismo</string>
    <string name="des_lol">Juego estilo MOBA para PC</string>


    <!-- Descripcion detallada juego -->
    <string name="det_cod">Call of Duty es una serie de videojuegos de disparos en
        primera persona, de estilo bélico, desarrollada principal e inicialmente por
        Infinity Ward, Treyarch, Sledgehammer Games y en menor proporción Raven Software
        y distribuida por Activision.
    </string>
    <string name="det_fifa">FIFA es una saga de videojuegos de fútbol publicados
        anualmente por Electronic Arts bajo el sello de EA Sports creado en Japón.
        Cuando la saga comenzó a finales de 1993 se destacó por ser el primero en tener una
        licencia oficial de la FIFA</string>
    <string name="det_bat">La franquicia Battlefield es una serie de videojuegos
        de disparos en primera persona, de estilo bélico, desarrollada principalmente
        por EA Digital Illusion CE y distribuida por Electronic Arts.</string>
    <string name="det_lol">League of Legends, es un videojuego multijugador de arena
        de batalla en línea desarrollado y publicado por Riot Games. Inspirándose en
        Defense of the Ancients, un mapa personalizado para Warcraft III, los fundadores
        de Riot buscaron desarrollar un juego independiente del mismo género.</string>


    <!-- Nombres del menú -->
    <string name="catgeoriaMenu">Categorias</string>
    <string name="formularioMenu">Formulario</string>
    <string name="listaMenu">Lista de compra</string>
    <string name="inicioMenu">Inicio</string>
    <string name="acercaDeMenu">Acerca de</string>
    <string name="titleCat">Categorias de Juegos</string>
    <string name="atrasText">Atras</string>

    <!-- Strings varios -->
    <string name="textInitUp">Bienvenido a ES Application</string>
    <string name="textInitDown">Esperamos que esta aplicación sea de su agrado, si tiene cualquier problema o sugerencia no dude en ponerse en contacto con nosotros</string>

    <!-- String formulario -->
    <string name="formularioText">Formulario</string>
    <string name="nombreText">Nombre</string>
    <string name="emailText">Email</string>
    <string name="asuntoText">Asunto</string>
    <string name="mensajeText">Mensaje</string>
    <string name="terminosText">Acepto Términos y Condiciones</string>


</resources>